# proxy_dns

client/DNSClient/: .gitignore  CMakeLists.txt
client/DNSClient/headers/: mainwindow.h
client/DNSClient/headers/models/: errorsModel.h
client/DNSClient/headers/themes/: darkTheme.h
client/DNSClient/headers/ui/: centralWidget.h  statusBar.h  toolBar.h
client/DNSClient/headers/ui/centralDashboardWidgets/: cacheHitRate.h  dnsTypeCardWidget.h  latencyP95.h  querryTypes.h  recentErrors.h  requestsChartWidget.h  topDomains.h
client/DNSClient/sources/: main.cpp  mainwindow.cpp
client/DNSClient/sources/models/: errorsModel.cpp
client/DNSClient/sources/themes/: darkTheme.cpp
client/DNSClient/sources/ui/: centralWidget.cpp  statusBar.cpp  toolBar.cpp
client/DNSClient/sources/ui/centralDashboardWidgets/: cacheHitRate.cpp  dnsTypeCardWidget.cpp  latencyP95.cpp  querryTypes.cpp  recentErrors.cpp  requestsChartWidget.cpp  topDomains.cpp
headers/: utils.h
headers/DNS/: dnsCache.h  dnsDispatcher.h  dnsParser.h  dnsRequest.h  dnsResolve.h  dnsResolver.h  dnsServer.h
headers/Types/: a.h  aaaa.h  cname.h  iType.h  mx.h  ns.h  txt.h
sources/: main.cpp
sources/DNS/: dnsCache.cpp  dnsDispatcher.cpp  dnsParser.cpp  dnsResolve.cpp  dnsResolver.cpp  dnsServer.cpp
sources/Types/: a.cpp  aaaa.cpp  cname.cpp  mx.cpp  ns.cpp  txt.cpp
